# sekou_desktop

./: README.md
desktop/: CMakeLists.txt  clear.sh  setup.py
desktop/desktop/: .ods  file  main.py  result  scro.py  test.ods  test1.ods
desktop/desktop/composants/: __init__.py  button.py  cadre.py  checkbuton.py  label.py  liste.py  menu.py
desktop/desktop/core/: config.py  core.py
desktop/desktop/core/data/eleves/archives/: liste 1 année.ods  liste 2 année.ods  liste 6 année.ods  liste 7 année.ods  liste 8 année.ods  liste 9 année.ods  register.txt
desktop/desktop/core/data/eleves/listes/: .~lock.classe 1 année.ods#  .~lock.liste 1 année.ods#  .~lock.liste 9 année.ods#  Makefile  liste 1 année.ods  liste 2 année.ods  liste 3 année.ods  liste 4 année.ods  liste 5 année.ods  liste 6 année.ods  liste 7 année.ods  liste 8 année.ods  liste 9 année.ods  lists.py  test.ods
desktop/desktop/core/data/notes/Composition/: Chimie_7_20.json  EPS_7_1.json
desktop/desktop/core/data/notes/Devoir/: EPS_7_1.json
desktop/desktop/core/data/notes/Interrogation/: EPS_7_1.json  Mathematique_7_1.json
desktop/desktop/core/data/payements/: decembre_1.json  novembre_1.json  octobre_1.json  octobre_2.json  octobre_3.json  octobre_8.json
desktop/desktop/menu/: aide.py  classes.py  edition.py  eleve.py  files.py  forms.py  formulaire.py  header.py  items.py  menu.py  payement.py
desktop/desktop/utils/: arch.py  tableau.py
desktop/include/: db.hpp  utils.hpp
desktop/src/: cp.cpp  db.cpp  imshow.cpp  main.cpp  utils.cpp
(+19 files in other folders)
